header order navigation vars burger icon fix dark mode

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -19,3 +19,9 @@
   --font-weight: 400;
   --line-height: 1.5em;
 }
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background-color: var(--m-black);
+    --color: var(--m-white);
+  }
+}
