--- a/src/es/components/organisms/header/default-/default-.css
+++ b/src/es/components/organisms/header/default-/default-.css
@@ -11,11 +11,11 @@
   --header-default-a-menu-icon-height-open-mobile: var(--header-default-a-menu-icon-height);
   --header-default-a-menu-icon-height: 3px;
   --header-default-a-menu-icon-margin: 0;
-  --header-default-a-menu-icon-one-transform: rotate(-45deg) translateY(0.77em);
+  --header-default-a-menu-icon-one-transform: rotate(-45deg) translateY(0.87em);
   --header-default-a-menu-icon-padding-open: var(--header-default-a-menu-icon-padding);
-  --header-default-a-menu-icon-padding: 1.7rem 5% 1.2rem;
+  --header-default-a-menu-icon-padding: 1.7rem var(--content-spacing-mobile, var(--content-spacing)) 1.2rem;
   --header-default-a-menu-icon-spacing: 6px;
-  --header-default-a-menu-icon-two-transform: rotate(45deg) translateY(-0.77em);
+  --header-default-a-menu-icon-two-transform: rotate(45deg) translateY(-0.87em);
   --header-default-a-menu-icon-width-open-mobile: var(--header-default-a-menu-icon-width);
   --header-default-a-menu-icon-width: 28px;
   --header-default-a-padding-mobile: 1.5rem 0 1.4rem 0;
@@ -29,17 +29,13 @@
   --header-default-box-sizing-open-mobile: border-box;
   --header-default-content-spacing-mobile: 0;
   --header-default-content-spacing: 0;
+  --header-default-content-width-mobile: 100%;
   --header-default-flex-wrap: wrap;
   --header-default-height-mobile: 5rem;
   --header-default-height: auto;
   --header-default-justify-content-mobile: space-between;
   --header-default-justify-content: flex-start;
   --header-default-left-open-mobile: 0;
-  --header-default-m-navigation-background-color-mobile: var(--background-color);
-  --header-default-m-navigation-height-mobile: calc(100vh - var(--header-default-m-navigation-top-mobile));
-  --header-default-m-navigation-height-open-mobile: var(--header-default-m-navigation-height-mobile);
-  --header-default-m-navigation-top-mobile: var(--header-default-height-mobile);
-  --header-default-m-navigation-transition: none;
   --header-default-logo-align-items: baseline;
   --header-default-logo-flex-grow: 0;
   --header-default-logo-justify-content: flex-start;
@@ -47,6 +43,11 @@
   --header-default-logo-max-height: 2em;
   --header-default-logo-max-width: 50vw;
   --header-default-logo-padding: 0 0 0.75rem 0;
+  --header-default-m-navigation-background-color-mobile: var(--background-color);
+  --header-default-m-navigation-height-mobile: calc(100vh - var(--header-default-m-navigation-top-mobile));
+  --header-default-m-navigation-height-open-mobile: var(--header-default-m-navigation-height-mobile);
+  --header-default-m-navigation-top-mobile: var(--header-default-height-mobile);
+  --header-default-m-navigation-transition: none;
   --header-default-order: 0;
   --header-default-padding-mobile: 0 0 0;
   --header-default-padding: 1.5rem 0 0;
